--- a/Config/shared.xcconfig
+++ b/Config/shared.xcconfig
@@ -1,4 +1,3 @@
-OTHER_SWIFT_FLAGS[config=DEV][sdk=*] = $(inherited) -DDEV
-OTHER_SWIFT_FLAGS[config=TEST][sdk=*] = $(inherited) -DTEST
-OTHER_SWIFT_FLAGS[config=QA][sdk=*] = $(inherited) -DTEST -DQA
-OTHER_SWIFT_FLAGS[config=PROD][sdk=*] = $(inherited) -DPROD
+OTHER_SWIFT_FLAGS[config=Dev][sdk=*] = $(inherited) -DDev
+OTHER_SWIFT_FLAGS[config=Alpha][sdk=*] = $(inherited) -DAlpha
+OTHER_SWIFT_FLAGS[config=Prod][sdk=*] = $(inherited) -DProd
