--- a/TuistMyApp.xcworkspace/xcshareddata/xcschemes/TuistMyApp-Workspace.xcscheme
+++ b/TuistMyApp.xcworkspace/xcshareddata/xcschemes/TuistMyApp-Workspace.xcscheme
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "DF5F35627185A15B8978E378"
-               BuildableName = "TuistMyApp.app"
-               BlueprintName = "TuistMyApp"
+               BlueprintIdentifier = "CFFD46D96A5A0320D5D43983"
+               BuildableName = "Dev_TuistMyApp.app"
+               BlueprintName = "Dev_TuistMyApp"
                ReferencedContainer = "container:TuistMyApp.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -44,15 +44,15 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "DF5F35627185A15B8978E378"
-            BuildableName = "TuistMyApp.app"
-            BlueprintName = "TuistMyApp"
+            BlueprintIdentifier = "CFFD46D96A5A0320D5D43983"
+            BuildableName = "Dev_TuistMyApp.app"
+            BlueprintName = "Dev_TuistMyApp"
             ReferencedContainer = "container:TuistMyApp.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
-      buildConfiguration = "Alpha"
+      buildConfiguration = "Dev"
       shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
@@ -61,9 +61,9 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "DF5F35627185A15B8978E378"
-            BuildableName = "TuistMyApp.app"
-            BlueprintName = "TuistMyApp"
+            BlueprintIdentifier = "CFFD46D96A5A0320D5D43983"
+            BuildableName = "Dev_TuistMyApp.app"
+            BlueprintName = "Dev_TuistMyApp"
             ReferencedContainer = "container:TuistMyApp.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -72,7 +72,7 @@
       buildConfiguration = "Alpha">
    </AnalyzeAction>
    <ArchiveAction
-      buildConfiguration = "Alpha"
+      buildConfiguration = "Dev"
       revealArchiveInOrganizer = "YES">
    </ArchiveAction>
 </Scheme>
