--- a/TuistMyApp.xcworkspace/xcshareddata/xcschemes/TuistMyApp-Workspace.xcscheme
+++ b/TuistMyApp.xcworkspace/xcshareddata/xcschemes/TuistMyApp-Workspace.xcscheme
@@ -14,24 +14,124 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "CFFD46D96A5A0320D5D43983"
-               BuildableName = "Dev_TuistMyApp.app"
-               BlueprintName = "Dev_TuistMyApp"
+               BlueprintIdentifier = "DF5F35627185A15B8978E378"
+               BuildableName = "TuistMyApp.app"
+               BlueprintName = "TuistMyApp"
+               ReferencedContainer = "container:TuistMyApp.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "39D99C85C7158A073AFFBFCA"
+               BuildableName = "TuistMyAppKit.framework"
+               BlueprintName = "TuistMyAppKit"
+               ReferencedContainer = "container:TuistMyApp.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "BB55D15D4C3F4CDE7A1FDC80"
+               BuildableName = "TuistMyAppKitTests.xctest"
+               BlueprintName = "TuistMyAppKitTests"
+               ReferencedContainer = "container:TuistMyApp.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "1D215299D694A9586A00D0BD"
+               BuildableName = "TuistMyAppTests.xctest"
+               BlueprintName = "TuistMyAppTests"
+               ReferencedContainer = "container:TuistMyApp.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "7EA78F9DDE21B2D28A6F8970"
+               BuildableName = "TuistMyAppUI.framework"
+               BlueprintName = "TuistMyAppUI"
+               ReferencedContainer = "container:TuistMyApp.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "87B375261049E7C974F74FB2"
+               BuildableName = "TuistMyAppUITests.xctest"
+               BlueprintName = "TuistMyAppUITests"
                ReferencedContainer = "container:TuistMyApp.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
-      buildConfiguration = "Alpha"
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "BB55D15D4C3F4CDE7A1FDC80"
+               BuildableName = "TuistMyAppKitTests.xctest"
+               BlueprintName = "TuistMyAppKitTests"
+               ReferencedContainer = "container:TuistMyApp.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "1D215299D694A9586A00D0BD"
+               BuildableName = "TuistMyAppTests.xctest"
+               BlueprintName = "TuistMyAppTests"
+               ReferencedContainer = "container:TuistMyApp.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "87B375261049E7C974F74FB2"
+               BuildableName = "TuistMyAppUITests.xctest"
+               BlueprintName = "TuistMyAppUITests"
+               ReferencedContainer = "container:TuistMyApp.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
-      buildConfiguration = "Alpha"
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
@@ -44,15 +144,15 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "CFFD46D96A5A0320D5D43983"
-            BuildableName = "Dev_TuistMyApp.app"
-            BlueprintName = "Dev_TuistMyApp"
+            BlueprintIdentifier = "DF5F35627185A15B8978E378"
+            BuildableName = "TuistMyApp.app"
+            BlueprintName = "TuistMyApp"
             ReferencedContainer = "container:TuistMyApp.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
-      buildConfiguration = "Dev"
+      buildConfiguration = "Release"
       shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
@@ -61,18 +161,18 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "CFFD46D96A5A0320D5D43983"
-            BuildableName = "Dev_TuistMyApp.app"
-            BlueprintName = "Dev_TuistMyApp"
+            BlueprintIdentifier = "DF5F35627185A15B8978E378"
+            BuildableName = "TuistMyApp.app"
+            BlueprintName = "TuistMyApp"
             ReferencedContainer = "container:TuistMyApp.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
-      buildConfiguration = "Alpha">
+      buildConfiguration = "Debug">
    </AnalyzeAction>
    <ArchiveAction
-      buildConfiguration = "Dev"
+      buildConfiguration = "Release"
       revealArchiveInOrganizer = "YES">
    </ArchiveAction>
 </Scheme>
